Fix blockquote style
Last style was too light. Now features less spacing and a darker font, but it is still different from normal paragraph

--- a/app/_assets/_scss/_base.typography.scss
+++ b/app/_assets/_scss/_base.typography.scss
@@ -25,10 +25,10 @@ ul, ol{
 
 blockquote{
     @extend .ms0;
-    padding-left: $inuit-base-spacing-unit;
-    border-left: ($inuit-base-spacing-unit / 6) solid $color-detail;
+    padding-left: halve($inuit-base-spacing-unit);
+    border-left: 2px solid lighten($inuit-base-text-color, 30);
     font-style: italic;
-    color: lighten($inuit-base-text-color, 50);
+    color: lighten($inuit-base-text-color, 40);
 }
 
 %code-box{
